incorrect width of non breaking space &nbsp; inside MathML, r+sr=roc, b=247151